doc: add camera-calibration.pdf, fix type in doc.tex

--- a/doc/doc.tex
+++ b/doc/doc.tex
@@ -11,7 +11,7 @@
 
 \input{layout}
 
-\title{Point cloud-based camera calibration}
+\title{Point cloud based camera calibration}
 \author{Stefan Eichenberger}
 \date{July 2018}
 \advisors{Marcus Hudritsch}
